--- a/content/post/12/12.md
+++ b/content/post/12/12.md
@@ -3,7 +3,7 @@ title: " Navigating the World of Machine Learning"
 date: "2023-11-22T11:02:08-07:00"
 author: " Efesoy "
 draft: false
-categories: ["Machine Learning"]
+categories: ["Machine Learning", "AI"]
 cover:
     image: post/12/1212.jpg
    
