--- a/content/post/13/13.md
+++ b/content/post/13/13.md
@@ -21,4 +21,4 @@ cover:
 
 > *"Consensus mechanisms are the true democratic force behind blockchain technology. They ensure integrity and trust, not through centralized authority, but through collective agreement."* - Vitalik Buterin, Co-founder of Ethereum
 
-💰So that's Blockchain in my own words and how does it work. When we hear about Blockchain on first time, we only think of bitcoin, right? Sure, Bitcoin is the poster child, but blockchain is like the Internet useful for a lot more than just one thing. As I mentioned above it’s all about trust. With blockchain, you don’t need to trust the people you're dealing with directly because the system itself is trustworthy. Moreover it's not just about money, Blockchain could change how we sign contracts, buy houses, and even vote.
+💰So that's Blockchain in my own words and how does it work. When we hear about Blockchain on first time, we only think of bitcoin, right? Sure, Bitcoin is the poster child, but blockchain is like the Internet useful for a lot more than just one thing. As I mentioned above it’s all about trust. With blockchain, you don’t need to trust the people you're dealing with directly because the system itself is trustworthy. Moreover it's not just about money, Blockchain could change how we sign contracts, buy houses, and even vote. Here is the well described video about Blockchain [here](https://www.youtube.com/watch?v=yubzJw0uiE4)
