--- a/content/post/14/14.md
+++ b/content/post/14/14.md
@@ -13,7 +13,7 @@ We've all heard of Metaverse lately, especially with the developments in VR head
 This is a computer generated environment and other participants in the long run will essentially act like a 3D version internet, even if it sounds a little different and unimaginative. But guess what? It's getting real, and it might just be the next big thing we all get into. this is actually a new world that you can chill with friends, work, game, even catch live shows, and you don't even have to step outside your home. That’s what the Metaverse is all about. It's taking the internet to a whole new level, where instead of clicking and scrolling, We've entered a virtual world that's almost as real as the one outside your window.
 
 👾So, what's the big deal about the Metaverse? Obviously, it's much more than putting on a VR headset and escaping reality.
-We're talking about a place where you can have an avatar that works in a virtual workplace, takes virtual classes, or hangs out with pals in a virtual cafe. Moreover, there's this whole digital economy thing going on you can buy and sell virtual stuff using real money like NFT. Non Fungible Token(NFT) are like digital art pieces that you can own in Metaverse, and some of them are worth a fortune.  Imagine if you had bought one of these NFTs back in 2017,  you'd be sitting on a small fortune right now. Thus it's showing us how digital items in the Metaverse can have real world value."
+We're talking about a place where you can have an avatar that works in a virtual workplace, takes virtual classes, or hangs out with pals in a virtual cafe. Moreover, there's this whole digital economy thing going on you can buy and sell virtual stuff using real money like NFT. Non Fungible Token(NFT) are like digital art pieces that you can own in Metaverse, and some of them are worth a fortune.  Imagine if you had bought one of these NFTs back in 2017,  you'd be sitting on a small fortune right now. Thus it's showing us how digital items in the Metaverse can have real world value.
 
 👾As everything has its weaknesses, the Metaverse has its weaknesses. The main ones are privacy and security, because in the future there will be problems with everyone getting into the Metaverse. How do we keep our virtual selves safe?  And what about the impact on our real world social lives and mental health? These are big questions we need to answer as we step into this exciting but unknown virtual future.
 
