--- a/content/post/15/15.md
+++ b/content/post/15/15.md
@@ -9,7 +9,7 @@ cover:
 
 ---
 
-From now on, I will post the interview questions I did here on leetcode and share important information about them here, such as important points I found important, parts I had difficulty with and new things I learned.
+From now on, I will post the interview questions I did here on leetcode and share important information about them here, such as important points I found important, parts I had difficulty with and new things I learned...
 
 **👇You can find these questions on top at leetcode section👇** 
 ## [Leetcode](/TBEwebsite/leetcode/)
