--- a/content/post/16 copy/16.md
+++ b/content/post/16 copy/16.md
@@ -9,7 +9,7 @@ cover:
 
 ---
 
-# My Journey with Meteor Detection at SEAL Lab
+# My Journey with Meteor Detection at SEAL Lab!
 Have you ever stopped to think about how much space debris is falling to Earth every single day? Well, NASA estimates that 48.5 tons of meteoritic material hits our planet daily! When I first read that, I was mind-blown. This sparked my interest in studying meteor showers more closely—and what better way to do that than by diving into the world of signal processing, antennas, and space science?
 
 During my time as an Undergraduate Research Assistant at SEAL Lab, I got to work on an exciting project aimed at detecting meteors using passive antennas to capture Very-Low-Frequency (VLF) and Ultra-Low-Frequency (ULF) signals. Essentially, we’re capturing the electromagnetic signals from meteors as they burn up in Earth’s atmosphere—pretty cool, right?
