--- a/content/post/16/16.md
+++ b/content/post/16/16.md
@@ -1,13 +1,14 @@
 ---
-title: "My Journey with Meteor Detection at SEAL Lab"
+title: "Undergraduate Research Assistant at SEAL Lab"
 date: "2023-11-27T11:02:08-07:00"
 author: " Efesoy "
 draft: false
 categories: ["Research", "Lab"]
 cover:
-    image: post/15/15.jpg
+    image: post/16/166.jpg
 
 ---
+## My Journey with Meteor Detection at SEAL Lab
 
 Have you ever stopped to think about how much space debris is falling to Earth every single day? Well, **NASA** estimates that 48.5 tons of meteoritic material hits our planet daily! When I first read that, I was mind-blown. This sparked my interest in studying meteor showers more closely—and what better way to do that than by diving into the world of signal processing, antennas, and space science?
 
